--- a/PrintStop/app/src/main/res/layout/activity_main_screen.xml
+++ b/PrintStop/app/src/main/res/layout/activity_main_screen.xml
@@ -100,7 +100,38 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="5"></LinearLayout>
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+
+                <android.support.design.widget.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:padding="10dp"
+                    android:id="@+id/print_fab"
+                    android:background="#FFF"
+                    android:elevation="8dp"
+                    android:src="@drawable/printer"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <ImageView
+                        android:layout_marginLeft="-90dp"
+                        android:id="@+id/img_pdf_file"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:scaleType="center"
+                        />
+                </LinearLayout>
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -150,5 +181,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </RelativeLayout>
