--- a/PrintStop/app/src/main/res/layout/activity_main_screen.xml
+++ b/PrintStop/app/src/main/res/layout/activity_main_screen.xml
@@ -104,7 +104,7 @@
                 android:orientation="horizontal">
 
 
-                <android.support.design.widget.FloatingActionButton
+                <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
